SDI-2629: swap, running API addition/changes
